# igoodmem_deepeval

./: .gitignore  GOODMEM_INTEGRATION_COMPARISON.md  README.md  pyproject.toml
.claude/agent-memory/goodmem-integration-orchestrator/: MEMORY.md  project_goodmem_integration.md
deepeval/integrations/goodmem/: README.md  __init__.py  client.py  types.py
examples/: benchmark_goodmem_vs_baseline.py  benchmark_reranking.py  goodmem_vs_vectara.py  hallucination_detection.py  metadata_filtered_retrieval.py  openai_rag_eval.py  retrieval_tuning_eval.py  run_benchmark.py  smoke_goodmem_deepeval.py
examples/benchmark/: datasets.py  run_benchmark.py  runner.py
examples/benchmark/providers/: __init__.py  base.py  contextual_provider.py  goodmem_provider.py  vectara_provider.py  weaviate_provider.py
src/goodmem_deepeval/: __init__.py  client.py  comparison.py  deepeval_helpers.py  pipeline.py  retriever.py
tests/: conftest.py  test_client.py  test_comparison.py  test_deepeval_helpers.py  test_pipeline.py  test_retriever.py
tests/test_integrations/: test_goodmem.py  test_goodmem_e2e.py  test_goodmem_eval.py  test_goodmem_results.md
