[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "igoodmem-deepeval"
version = "0.1.0"
description = "Evaluation-focused integration between GoodMem and DeepEval for RAG and retriever benchmarking."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "GoodMem", email = "support@goodmem.ai" },
]
license = { text = "MIT" }

dependencies = [
  "goodmem-client>=1.5.12",
  "deepeval>=3.8.0",
  "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
benchmark = [
  "tqdm>=4.0",
  "vectara-client",
  "weaviate-client>=4.0",
  "contextual-client>=0.11.0",
]

[project.urls]
Homepage = "https://docs.goodmem.ai/docs/"
"DeepEval" = "https://deepeval.com/docs/getting-started"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]